[package]
name = "pickpocket"
version = "0.1.0"
edition = "2021"

[lib]
name = "pocket"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "pick"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dll-syringe = "0.15.0"
ctor = "0.2.6"
simple-logging = "2"
log = "0.4"
retour = { git = "https://github.com/Hpmason/retour-rs", features = ["static-detour", "thiscall-abi"] }
clap = { version = "4.4.13", features = ["derive"] }
once_cell = "1.19.0"
ipc-channel = "0.18.0"
serde = {  version ="1", features = ["derive"] }

[dependencies.windows]
version = "0.*"
features = [
    "Win32_System",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_System_Console"
]
